--- a/composer.json
+++ b/composer.json
@@ -27,14 +27,14 @@
         "php": "^8.1|^8.2|^8.3|^8.4",
         "ext-mbstring": "*",
         "cakephp/chronos": ">=2.0.0",
-        "illuminate/support": "^10.34|^11.0",
-        "illuminate/testing": "^10.34|^11.0",
+        "illuminate/support": "^10.34|^11.0|^12.0",
+        "illuminate/testing": "^10.34|^11.0|^12.0",
         "laravel/nova": "^5.0",
         "phpunit/phpunit": "^10.0|^11.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
-        "orchestra/testbench": "^8.0|^9.0"
+        "orchestra/testbench": "^8.0|^9.0|^10.0"
     },
     "repositories": [
         {
