--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,19 +17,23 @@ jobs:
         strategy:
             fail-fast: true
             matrix:
-                php: [ '8.1', '8.2', '8.3', '8.4']
-                laravel: [ '10.*', '11.*', '12.*' ]
+                php: ['8.0', '8.1', '8.2']
+                laravel: [ '8.*', '9.*', '10.*', '11.*', '12.*' ]
                 dependency-version: [ prefer-stable ]
                 include:
                     -   laravel: 10.*
                         testbench: 8.*
+                    -   laravel: 9.*
+                        testbench: 7.*
+                    -   laravel: 8.*
+                        testbench: 6.*
                     -   laravel: 11.*
                         testbench: 9.*
                     -   laravel: 12.*
                         testbench: 10.*
                 exclude:
                     -   laravel: 10.*
-                        php: 8.1
+                        php: 8.0
                     -   laravel: 11.*
                         php: 8.1
                     -   laravel: 12.*
